sm2uploader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm2uploader
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: sm2uploader
